<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_1"
        android:orderInCategory="101"
        android:title="@string/menu_1"/>
    
    <item
        android:id="@+id/menu_2"
        android:orderInCategory="102"
        android:title="@string/menu_2"/>
    
    <item
        android:id="@+id/menu_3"
        android:orderInCategory="103"
        android:title="@string/menu_3"/>
    
     <item
        android:id="@+id/menu_4"
        android:orderInCategory="104"
        android:title="@string/menu_4"/>
     
      <item
        android:id="@+id/menu_5"
        android:orderInCategory="105"
        android:title="@string/menu_5"/>
      
      <item
        android:id="@+id/menu_6"
        android:orderInCategory="106"
        android:title="@string/menu_6"/>
      <item
        android:id="@+id/menu_7"
        android:orderInCategory="107"
        android:title="@string/menu_7"/>

</menu>